Rate Limiting, MongoDB addition + PGCR Gradual Retrieval (#79)
* Implemented update~create action while retrieving raid stats

* Unit test checkpoint for raidStatsService

* Added several unit tests and changed the raid stats calculation slightly
The raid stats are not controlled and are done in the database side
instead of being done in the server-side. We re using aggregation pipelines
for calculations

* Moving most of the code to using Router function instead of Spring MVC controllers

* So much stuff worked on, for this PR

* Add rate limiting for PGCR requests

* Fix existing tests

* Fixed tests and removed controller advice

* Added mongoDB to the README.md

* Finished refactoring and correcting some tests, mostly negative tests

* Added ignores for requests that are bigger than 18kbs

* Moved values into separate constants

* Added bungie membership data to DTO + other stuff

* Modified gitignore

* final refacoring and revision